test: update tests to pass with new return types